// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeIcon component match snapshot correctly 1`] = `
<svg
  fill="#201c3a"
  height={24}
  stroke="#201c3a"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
  />
</svg>
`;

exports[`ThemeIcon component match snapshot correctly 2`] = `
<ArrowUp
  darkMode={false}
  size={24}
>
  <svg
    fill="#201c3a"
    height={24}
    stroke="#201c3a"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
    />
  </svg>
</ArrowUp>
`;

exports[`ThemeIcon component match snapshot correctly 3`] = `
<svg
  fill="none"
  height={24}
  stroke="#ffc107"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="5"
  />
  <line
    x1="12"
    x2="12"
    y1="1"
    y2="3"
  />
  <line
    x1="12"
    x2="12"
    y1="21"
    y2="23"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="4.22"
    y2="5.64"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="18.36"
    y2="19.78"
  />
  <line
    x1="1"
    x2="3"
    y1="12"
    y2="12"
  />
  <line
    x1="21"
    x2="23"
    y1="12"
    y2="12"
  />
  <line
    x1="4.22"
    x2="5.64"
    y1="19.78"
    y2="18.36"
  />
  <line
    x1="18.36"
    x2="19.78"
    y1="5.64"
    y2="4.22"
  />
</svg>
`;

exports[`ThemeIcon component match snapshot correctly 4`] = `
<ArrowUp
  darkMode={true}
  size={24}
>
  <svg
    fill="none"
    height={24}
    stroke="#ffc107"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="5"
    />
    <line
      x1="12"
      x2="12"
      y1="1"
      y2="3"
    />
    <line
      x1="12"
      x2="12"
      y1="21"
      y2="23"
    />
    <line
      x1="4.22"
      x2="5.64"
      y1="4.22"
      y2="5.64"
    />
    <line
      x1="18.36"
      x2="19.78"
      y1="18.36"
      y2="19.78"
    />
    <line
      x1="1"
      x2="3"
      y1="12"
      y2="12"
    />
    <line
      x1="21"
      x2="23"
      y1="12"
      y2="12"
    />
    <line
      x1="4.22"
      x2="5.64"
      y1="19.78"
      y2="18.36"
    />
    <line
      x1="18.36"
      x2="19.78"
      y1="5.64"
      y2="4.22"
    />
  </svg>
</ArrowUp>
`;
